[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Font-16.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Lato-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HostLobby.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[node name="HostLobby" type="Node2D"]
script = ExtResource( 3 )

[node name="playerOutput" type="TextEdit" parent="."]
margin_left = 232.0
margin_top = 4.0
margin_right = 317.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startGameButton" type="Button" parent="."]
margin_left = 36.0
margin_top = 120.307
margin_right = 194.0
margin_bottom = 140.307
custom_fonts/font = ExtResource( 1 )
text = "Start Game!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 13.831
margin_top = 26.0
margin_right = 118.831
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "Red Player ID:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 10.1427
margin_top = 69.5631
margin_right = 120.143
margin_bottom = 89.5631
custom_fonts/font = ExtResource( 1 )
text = "Blue Player ID:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="redPlayerID" type="TextEdit" parent="."]
margin_left = 128.0
margin_top = 26.0
margin_right = 225.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bluePlayerID" type="TextEdit" parent="."]
margin_left = 128.0
margin_top = 70.0
margin_right = 225.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="startGameButton" to="." method="_on_startGameButton_pressed"]
